react-netflix-ts: github pages added

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-netflix",
   "version": "0.1.0",
+  "homepage": "https://daramayo90.github.io/react-netflix-ts/",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
@@ -19,6 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
